# TupleNest

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  _typos.toml  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  ux_feedback.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
apps/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/coverage/: coverage-final.json  coverage-summary.json
apps/desktop/src/: App.close.test.tsx  App.dismiss.test.tsx  App.edits.test.tsx  App.explorer.test.tsx  App.flows.test.tsx  App.handlers.test.tsx  App.keys.test.tsx  App.overlays.test.tsx  App.panels.test.tsx  App.profiles.test.tsx  App.result.test.tsx  App.session.test.tsx  App.shortcuts.test.tsx  App.test.tsx  App.tsx  App.wiring.test.tsx  App.wiring2.test.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  README.md  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: connections.rs  main.rs  pg.rs
apps/desktop/src/app-shell/: ActivityRail.test.tsx  ActivityRail.tsx  StatusBar.test.tsx  StatusBar.tsx  Titlebar.test.tsx  Titlebar.tsx
apps/desktop/src/connections/: ConnectionForm.test.tsx  ConnectionForm.tsx  SavedList.test.tsx  SavedList.tsx
apps/desktop/src/editor/: QueryPanel.test.tsx  QueryPanel.tsx  SqlEditor.test.tsx  SqlEditor.tsx  TabsBar.test.tsx  TabsBar.tsx
apps/desktop/src/explorer/: ExplorerTree.test.tsx  ExplorerTree.tsx
apps/desktop/src/history/: HistoryPanel.test.tsx  HistoryPanel.tsx
apps/desktop/src/hooks/: useConnection.test.ts  useConnection.ts  useConnectionForm.test.ts  useConnectionForm.ts  useExplain.test.ts  useExplain.ts  useExplorerTree.test.ts  useExplorerTree.ts  useHealth.test.ts  useHealth.ts  useHistory.test.ts  useHistory.ts  useQuery.test.ts  useQuery.ts  useQueryTabs.test.ts  useQueryTabs.ts  useRowEdits.test.ts  useRowEdits.ts  useSearch.test.ts  useSearch.ts  useSnippets.test.ts  useSnippets.ts  useTransaction.test.ts  useTransaction.ts
apps/desktop/src/ipc/: types.ts
apps/desktop/src/lib/: build.test.ts  build.ts  caret.test.ts  caret.ts  chart.test.ts  chart.ts  complete.test.ts  complete.ts  csv.test.ts  csv.ts  dml.test.ts  dml.ts  explain-text.test.ts  explain-text.ts  explain.test.ts  explain.ts  health.test.ts  health.ts  icons.test.tsx  icons.tsx  intel.test.ts  intel.ts  nodes.test.ts  nodes.ts  partitions.test.ts  partitions.ts  platform.test.ts  platform.ts  save.test.ts  save.ts  shortcuts.test.ts  shortcuts.ts  sql.test.ts  sql.test.tsx  sql.tsx  text.test.ts  text.ts  version.test.ts  version.ts
apps/desktop/src/overlays/: AuditModal.test.tsx  AuditModal.tsx  DetailsModal.test.tsx  DetailsModal.tsx  DiagramModal.test.tsx  DiagramModal.tsx  EditReviewModal.test.tsx  EditReviewModal.tsx  ExplainModal.test.tsx  ExplainModal.tsx  HealthModal.test.tsx  HealthModal.tsx  ImportModal.test.tsx  ImportModal.tsx  IntelModal.test.tsx  IntelModal.tsx  MonitorModal.test.tsx  MonitorModal.tsx  Overlays.test.tsx  Overlays.tsx  PartitionsModal.test.tsx  PartitionsModal.tsx  PastePlanModal.test.tsx  PastePlanModal.tsx  PlanView.tsx  SchemaModal.test.tsx  SchemaModal.tsx  SearchModal.test.tsx  SearchModal.tsx
apps/desktop/src/results/: Grid.test.tsx  Grid.tsx
apps/desktop/src/test/: backend.ts  setup.ts
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/connection-core/: Cargo.toml
crates/connection-core/src/: lib.rs
crates/credential-store/: Cargo.toml
crates/credential-store/src/: keychain.rs  lib.rs  memory.rs  secret.rs
crates/credential-store/tests/: store_contract.rs
crates/driver-api/: Cargo.toml
crates/driver-api/src/: capabilities.rs  config.rs  error.rs  ids.rs  lib.rs  request.rs
crates/driver-api/tests/: contract_mock.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/src/: lib.rs  tls.rs
crates/driver-postgres/tests/: live_pg.rs
crates/export-core/: Cargo.toml
crates/export-core/src/: lib.rs
crates/metadata-cache/: Cargo.toml
crates/metadata-cache/src/: lib.rs
crates/metadata-core/: Cargo.toml
crates/metadata-core/src/: lib.rs
crates/query-engine/: Cargo.toml
crates/query-engine/src/: lib.rs
crates/result-stream/: Cargo.toml
crates/result-stream/src/: lib.rs
crates/safety-engine/: Cargo.toml
crates/safety-engine/src/: lib.rs
crates/sql-language-service/: Cargo.toml
crates/sql-language-service/src/: lib.rs
crates/sql-parser/: Cargo.toml
crates/sql-parser/src/: lib.rs
crates/ssh-core/: Cargo.toml
crates/ssh-core/src/: lib.rs
crates/ssh-core/tests/: live_tunnel.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/transaction-core/: Cargo.toml
crates/transaction-core/src/: lib.rs
crates/tunnel-core/: Cargo.toml
crates/tunnel-core/src/: lib.rs
crates/workspace-store/: Cargo.toml
crates/workspace-store/src/: lib.rs
docs/: ROADMAP.md  design-requirements.md  dev-sshd.md  phase-0-plan.md  phase-1-plan.md  releasing.md
docs/releases/: v0.1.0-beta.1.md
docs/site/: blog-why-asks.html  blog.html  changelog.html  docs.html  download.html  features.html  index.html  roadmap.html  security.html  site.css  site.js
extensions/: README.md
scripts/: release-macos.sh  set-signing-secret.sh
