[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app-core",
  "crates/driver-api",
  "crates/driver-postgres",
  "crates/connection-core",
  "crates/query-engine",
  "crates/result-stream",
  "crates/metadata-core",
  "crates/metadata-cache",
  "crates/sql-parser",
  "crates/sql-language-service",
  "crates/transaction-core",
  "crates/safety-engine",
  "crates/credential-store",
  "crates/ssh-core",
  "crates/tunnel-core",
  "crates/export-core",
  "crates/workspace-store",
  "crates/task-engine",
  "crates/telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# The oldest Rust that compiles this. Cargo turns "too old" into one clear
# line instead of a page of errors from a dependency nobody has heard of.
# `rust-toolchain.toml` still says `channel = "stable"`: pinning an exact
# version there would also pin CI, and a floating stable is what catches a
# new clippy lint on the day it lands rather than months later.
rust-version = "1.82"
license = "MIT"
# These crates are the internals of one desktop app, not libraries anyone is
# meant to depend on. Saying so stops `cargo publish` from ever sending them to
# crates.io by accident, and lets them go on referring to each other by path
# without a version — which is exactly what a workspace is for.
publish = false

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
