[workspace]
resolver = "2"
# Every member here has code in it. The workspace used to also list ten crates
# — `app-core`, `safety-engine`, `query-engine`, `sql-parser`, `metadata-core`,
# `sql-language-service`, `transaction-core`, `task-engine`, `export-core`,
# `tunnel-core` — that were one doc-comment line each and that nothing, not even
# each other, depended on. They were scaffolding from the phase plans, and they
# made the tree read as though there were a backend safety engine when the
# safety rules live in `apps/desktop/src/lib/sql.tsx` and `dml.ts`. A directory
# named after a feature is a claim; these ones were not true. Deleted rather
# than kept as placeholders — `git log` remembers them, and a real one can be
# created the day something needs it.
members = [
  "apps/desktop/src-tauri",
  "crates/driver-api",
  "crates/driver-postgres",
  "crates/connection-core",
  "crates/result-stream",
  "crates/metadata-cache",
  "crates/credential-store",
  "crates/ssh-core",
  "crates/workspace-store",
  "crates/telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# The oldest Rust that compiles this. Cargo turns "too old" into one clear
# line instead of a page of errors from a dependency nobody has heard of.
# `rust-toolchain.toml` still says `channel = "stable"`: pinning an exact
# version there would also pin CI, and a floating stable is what catches a
# new clippy lint on the day it lands rather than months later.
rust-version = "1.82"
license = "MIT"
# These crates are the internals of one desktop app, not libraries anyone is
# meant to depend on. Saying so stops `cargo publish` from ever sending them to
# crates.io by accident, and lets them go on referring to each other by path
# without a version — which is exactly what a workspace is for.
publish = false

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
