[package]
name = "tuplenest-connection-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Connection lifecycle: staged reachability probe (DNS, TCP), later SSH/TLS"

[dependencies]
tuplenest-driver-api = { path = "../driver-api" }
tokio = { workspace = true, features = ["net"] }
