[package]
name = "tuplenest-connection-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Connection lifecycle: staged reachability probe (DNS, TCP), later SSH/TLS"

[dependencies]
tuplenest-driver-api = { path = "../driver-api" }
tokio = { workspace = true, features = ["net"] }
