[package]
name = "tuplenest-driver-postgres"
description = "PostgreSQL driver (Phase 0 proof of concept: connect, stream, cancel)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
uuid = { workspace = true }
tuplenest-driver-api = { path = "../driver-api" }

[dev-dependencies]
tokio = { workspace = true }
