[package]
name = "tuplenest-driver-postgres"
description = "PostgreSQL driver: connect, stream, cancel, full type rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-uuid-1",
  "with-chrono-0_4",
] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
hex = "0.4"
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
uuid = { workspace = true }
tuplenest-driver-api = { path = "../driver-api" }

[dev-dependencies]
hex = "0.4"
tokio = { workspace = true }
# Synthesises a CA and leaf certificates in-process so the VerifyCa verifier
# can be tested for what it actually does. The live server's cert names both
# `localhost` and `127.0.0.1`, so no address that reaches it is a name
# mismatch — the one case that distinguishes verify-ca from verify-full cannot
# be produced against it. Dev-only; it is not linked into the app.
rcgen = "0.13"
