[package]
name = "tuplenest-metadata-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed metadata cache: instant explorer loads, offline browsing"

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
