[package]
name = "tuplenest-ssh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "SSH tunnels for database connections: local listener over direct-tcpip channels"

[dependencies]
russh = "0.62"
tokio = { workspace = true, features = ["net", "io-util"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros"] }
