[package]
name = "tuplenest-telemetry"
description = "Structured logging with secret redaction"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
