[package]
name = "tuplenest-desktop"
description = "TupleNest desktop application (Tauri 2 shell)"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tuplenest-workspace-store = { path = "../../../crates/workspace-store" }
